Refactored app name and namespace.

--- a/App.yaml
+++ b/App.yaml
@@ -1,6 +1,6 @@
-Name: Sauron
+Name: Insight
 Version: 0.1.0
-Link: http://www.webiny.com/store/webiny/sauron/
+Link: http://www.webiny.com/store/webiny/Insight/
 Description:
 
 AuthorName: Webiny LTD
